Added support for Spring Boot executable jars